# provider-v2

./: .gitignore  PROJECT_DECISIONS.md  RAW.md  README.md  _write_report.py  config.toml  main.py  pyproject.toml  record.md  requirements.txt
.opencode/: oh-my-openagent.jsonc
.qoder/: settings.local.json
.qoder/hooks/: session-cleanup.py
agent_log/activity/: 20260618.md
agent_log/audit/: 20260618_arch_provider-self.md
docs-src/: INDEX.md  tests-guide.md
docs-src/core/: ARCHITECTURE.md  proxy.md
docs-src/src/core/: ARCHITECTURE.md  INDEX.md  __init__.py  errors.py  models_cache.py  proxy.md  proxy_selector.py  shims.py  tools.py
download/: download_6_new_pkgs.py  download_new_pkgs.py  download_pkg10_12.py  wenshushu_downloader.py
prompts/: tts_default.prompt
src/: __init__.py  logger.py
src/core/: __init__.py  autoupdate.py  candidate.py  config.py  errors.py  files.py  gateway.py  http.py  ids.py  io_utils.py  models_cache.py  process.py  proxy.py  proxy_selector.py  registry.py  retry.py  runtime_view.py  scheduler.py  selector.py  server.py  shims.py  terminal_sessions.py  tools.py  watcher.py
src/core.o/: autoupdate.py  errors.py  gateway.py  models_cache.py  registry.py  retry.py  selector.py  tools.py
src/routes/: __init__.py  anthropic.py  chat.py  function_call.py  health.py  models.py  openai.py  openai_chat.py  static.py
src/webui/: app.py  logs_ws.py  routes.py  server.py
template/: template_config.toml
tests/: conftest.py
tests/audio/: test_edge_tts.py  test_openai_fm.py
tests/e2e/: test_startup.py
(+2557 files in other folders)
